refactor: update swagger, remove response dto for models because gorm
